# ai-friendly-repo-template

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.testing.md  example_env_file.sh  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: 01-general.md
.github/workflows/: ci.yml
code_builder/: config.yaml  generate_plan.py  launch_aiders.sh  launch_aiders_fixed.sh  main_orchestrator.sh  prd_generator.py  test_launch_aiders.sh
docs/: -0.5_aider_prd.md  -1_setup_codebase.md  -1_starter_doc.md  00_project_vision.md  01_architecture_overview.md  02_rules_of_change.md  03_shared_code_rules.md  04_feature_implementation_rules.md  README_diagrams.md  aider_prd.md  code_builder.md  env_example.md  feature_flow.md
docs/adr/: 000_template.md
docs/context/: README_aider_orchestrator.md  README_code_builder.md
docs/guides/: repo_plus.md  repo_plus2.md  repo_plus3.md  repo_plus4.md  repo_plus5.md  testing_harness.md
docs/prd/: 001-hello-world-app.md  002-hello-world-app.md  003-hello-world-app.md  004-hello-world-app.md  005-hello-world-app.md  006-hello-world-app.md  README_prd.md
registry/: modules_index.md  pipeline_context.md  project_registry.json
repo_src/app/: Cargo.toml
repo_src/app/src/: app_component.rs  database.rs  error_template.rs  lib.rs  main.rs  server_fns.rs
repo_src/app/src/components/: item_form.rs  item_list.rs
repo_src/backend/: Cargo.toml  README_backend.md  main.py
repo_src/backend/database/: models.py  setup.py
repo_src/backend/src/: main.rs
repo_src/frontend/src/: database.rs  server_fns.rs
repo_src/scripts/: README_aider_orchestrator.md  aider_orchestrator.py  requirements.txt  run_multi_agent_aider.sh
repo_src/scripts/example_files/: .tmux.config
repo_src/scripts/multi_agent_aider/: README.md  __init__.py  agent_runner.py  config.yaml  log_summarizer.py  main_orchestrator.py  prd_generator.py  resume_manager.py  utils.py
repo_src/scripts/multi_terminal_examples/: README.md  aider-tmux.sh  launch_aider_grid.sh  ml-workspace.sh
repo_src/scripts/scripts/: run_aider_run_20250503_154635.sh
repo_src/scripts/state/: run_20250503_154635.json
repo_src/shared/src/: lib.rs
scripts/: gen_context.mts  new-feature.mts  update_system_diagram.mts
